--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pixiv_xiaocao_android
 description: Pixiv 安卓客户端
 
-version: 0.0.4
+version: 0.1.1
 
 environment:
   sdk: ">=2.12.3 <3.0.0"
@@ -22,6 +22,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   oktoast: ^3.0.0
   permission_handler: ^7.1.0
+  image_picker: ^0.7.5+3
+  html: ^0.15.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
