--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pixiv_xiaocao_android
 description: Pixiv 安卓客户端
 
-version: 0.1.4
+version: 0.1.5
 
 environment:
   sdk: ">=2.12.3 <3.0.0"
@@ -18,16 +18,14 @@ dependencies:
   package_info: ^2.0.0
   provider: ^5.0.0
   extended_image: ^4.0.1
-  extended_nested_scroll_view: ^3.0.0
   cached_network_image: ^3.0.0
   flutter_staggered_grid_view: ^0.4.0
   oktoast: ^3.0.0
   permission_handler: ^7.1.0
   image_picker: ^0.7.5+3
+  pull_to_refresh: ^2.0.0
   html: ^0.15.0
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+
 
 
 flutter:
