--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   intl: ^0.17.0
   #下拉刷新上拉加载
   pull_to_refresh: ^2.0.0
+  #解决 pull_to_refresh下拉刷新 跟 NestedScrollView 配合 非常不丝滑
+  extended_nested_scroll_view: ^5.0.0
   #瀑布流
   flutter_staggered_grid_view: ^0.4.0
   #日志
