--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pixiv_func_android
 description: Pixiv Android 客户端
 
-version: 0.3.1
+version: 0.3.2
 publish_to: 'none'
 environment:
   sdk: ">=2.14.0 <3.0.0"
@@ -19,7 +19,8 @@ dependencies:
   crypto: ^3.0.1
   #数据持久化
   shared_preferences: ^2.0.8
-  extended_image: ^4.2.1
+#  extended_image: ^4.2.1
+  extended_image: ^3.0.0
   intl: ^0.17.0
   #下拉刷新上拉加载
   pull_to_refresh: ^2.0.0
