--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pixiv_func_android
 description: Pixiv Android 客户端
 
-version: 0.3.2
+version: 0.3.2+1
 publish_to: 'none'
 environment:
   sdk: ">=2.14.0 <3.0.0"
