删除多余代码 新增flutter_lints 代码全部按照flutter_lints规范(Dart分析无任何警告) 修复图片源选择IP直连时下载必失败因为Isolate里没有忽略证书错误(main函数里全局设置只对主线程有效) 修复图片多次下载同一图片会创建多个任务的问题 新增主题切换(但仍推荐使用黑暗模式)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,4 +69,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation files("libs/androidndkgif-0.3.3.aar")
+    implementation 'androidx.webkit:webkit:1.4.0'
 }
