--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: pixiv_func_android
 description: Pixiv Android 客户端
 
-version: 0.3.2+1
-publish_to: 'none'
+version: 0.4.0
+publish_to: node
 environment:
   sdk: ">=2.14.0 <3.0.0"
 
@@ -35,10 +35,6 @@ dependencies:
   #申请权限
   permission_handler: ^8.1.6
   image_picker: ^0.8.4+2
-dev_dependencies:
-  json_serializable: ^5.0.2
-  build_runner: ^2.1.2
-  flutter_lints: ^1.0.4
 flutter:
   uses-material-design: true
   assets:
@@ -46,3 +42,7 @@ flutter:
     - assets/xiaocao.png
     - assets/kotlin-logo.png
     - assets/dart-logo.png
+dev_dependencies:
+  json_serializable: ^5.0.2
+  build_runner: ^2.1.2
+  flutter_lints: ^1.0.4
