--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,5 +69,6 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation files("libs/androidndkgif-0.3.3.aar")
+    implementation files("libs/PixivLocalReverseProxy.aar")
     implementation 'androidx.webkit:webkit:1.4.0'
 }
