--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: pixiv_func_android
 description: Pixiv Android 客户端
 
-version: 0.7.0
-publish_to: node
+version: 0.7.1
+publish_to: 'node'
 environment:
   sdk: ">=2.14.0 <3.0.0"
 
